4.Kubernetes/ingress/host-based/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dpl
spec:
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-cont
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactjs-dpl
spec:
  selector:
    matchLabels:
      app: reactjs-app
  template:
    metadata:
      labels:
        app: reactjs-app
    spec:
      containers:
      - name: reactjs-app
        image: 69966/earthdx:78
        ports:
        - containerPort: 80
