4.Kubernetes/ingress/host-based/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  # related to https config 
  tls:
    - hosts:
        - nginx.anajak-khmer.site 
        - react-demo.anajak-khmer.site # Change to your actual domain name
      secretName: demo-tls-cert
  rules:
# this process might tbe able to automate 
  - host: react-demo.anajak-khmer.site
    http:
      paths: 
        - pathType: Prefix 
          path: "/"
          backend:
            service: 
              name: reactjs-svc 
              port: 
                number: 80  
  - host: nginx.anajak-khmer.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
        # link to the service 
          service:
            name: nginx-svc
            port: 
              number: 80
